{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 12,
  "lineage": "0682a5f3-f091-34f3-0250-dd755c9fc2a6",
  "resources": [
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00ba1bb3bf6ca35a2",
            "public_dns": "ec2-52-192-191-180.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.192.191.180",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "es-staging-eip-a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08987db2d4f6df0ee",
            "public_dns": "ec2-18-176-20-183.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.176.20.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "es-staging-eip-c"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_d",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-088e93d4fe6923dac",
            "public_dns": "ec2-18-177-231-188.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.177.231.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "es-staging-eip-d"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06f75f815cfa7feb7",
            "owner_id": "561943100673",
            "tags": {
              "Name": "es-staging-igw"
            },
            "vpc_id": "vpc-0b69967ca47033f90"
          },
          "dependencies": [
            "module.module_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_c",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_d",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_private_a",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_private_c",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_private_d",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association_private_a",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association_private_c",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association_private_d",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association_public_a",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association_public_c",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association_public_d",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_d",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_d",
      "provider": "provider.aws"
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:561943100673:vpc/vpc-0b69967ca47033f90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-002b9c099c1aeb95d",
            "default_route_table_id": "rtb-04704d8cee7d16d80",
            "default_security_group_id": "sg-071e4cda8e40e62b8",
            "dhcp_options_id": "dopt-9f8de8f8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b69967ca47033f90",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04704d8cee7d16d80",
            "owner_id": "561943100673",
            "tags": {
              "Name": "es-staging-vpc"
            }
          }
        }
      ]
    }
  ]
}